<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="395dp"
        android:layout_height="395dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/board"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/todo1"
            android:onClick="dropIn"

            android:tag="0"
            app:layout_column="0"
            app:layout_row="0" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            app:layout_column="1"
            app:layout_row="0"
           android:onClick="dropIn"
            android:tag="1"
            android:contentDescription="@string/todo2" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            app:layout_column="2"
            app:layout_row="0"
           android:onClick="dropIn"
            android:tag="2"
            android:contentDescription="@string/todo3" />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            app:layout_column="0"
            app:layout_row="1"
           android:onClick="dropIn"
            android:tag="3"
            android:contentDescription="@string/todo4" />
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            app:layout_column="0"
            app:layout_row="2"
           android:onClick="dropIn"
            android:tag="6"
            android:contentDescription="@string/todo7" />
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            app:layout_column="1"
            app:layout_row="1"
           android:onClick="dropIn"
            android:tag="4"
            android:contentDescription="@string/todo5" />
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            app:layout_column="1"
            app:layout_row="2"
           android:onClick="dropIn"
            android:tag="7"
            android:contentDescription="@string/todo8" />
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            app:layout_column="2"
            app:layout_row="1"
           android:onClick="dropIn"
            android:tag="5"
            android:contentDescription="@string/todo6" />
        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            app:layout_column="2"
            app:layout_row="2"
           android:onClick="dropIn"
            android:tag="8"
            android:contentDescription="@string/todo9" />


    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/winnerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="148dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="46dp"
        android:onClick="playAgain"
        android:text="@string/play_again"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>